--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(autoMbo)
 export(benchmarkDmbo)
 export(plotBenchmark)
 export(plotMboHyperparams)
+export(task)
 export(tuneMboMbo)
 import(ParamHelpers)
 import(batchtools)
