--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,17 @@
 Package: EBO
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+Title: easy benchmark of optimization algorithms
+Version: 0.9.1
+Authors@R:
+    c(person(given = "Matthias",
+             family = "Gruber",
+             role=c("aut", "cre"),
+             email = "matthias.gruber@outlok.com"),
+      person(given = "Amadeu",
+             family = "Scheppach",
+             role= "aut",
+             email = "ascheppach@gmail.com"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: What license it uses
 Encoding: UTF-8
 LazyData: true
-Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
-Suggests: 
-    testthat
