--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 export(autoMbo)
 export(benchmarkDmbo)
 export(generateConfigdata)
+export(optimizertuneRace)
 export(plotBenchmark)
 export(plotMboHyperparams)
-export(task)
 export(tuneMboMbo)
 import(ParamHelpers)
 import(batchtools)
