--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: EBO
-Title: easy benchmark of optimization algorithms
+Title: Easy Benchmarks of Optimization Algorithms
 Version: 0.9.1
 Authors@R:
     c(person(given = "Matthias",
              family = "Gruber",
              role=c("aut", "cre"),
-             email = "matthias.gruber@outlok.com"),
+             email = "matthias.gruber@outlook.com"),
       person(given = "Amadeu",
              family = "Scheppach",
              role= "aut",
-             email = "ascheppach@gmail.com"))
-Description: What the package does (one paragraph).
-License: What license it uses
+             email = "scheppachamadeu@yahoo.de"))
+Description: EBO is a R package which is especially implemented for benchmarking optimization algorithms and dealing with practical issues in material science, enabling chemists and researchers a better understanding of their optimization and simulation.
+License: None.
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
