--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(autoMbo)
 export(benchmarkDmbo)
+export(boxplotCurve)
 export(generateConfigdata)
 export(optimizertuneRace)
 export(plotBenchmark)
 export(plotMboHyperparams)
+export(testAddIters)
+export(testConfigs)
 export(tuneMboMbo)
 import(ParamHelpers)
 import(batchtools)
