--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(autoMbo)
 export(benchmarkDmbo)
 export(boxplotCurve)
 export(generateConfigdata)
+export(generateProblemList)
 export(optimizertuneRace)
 export(plotBenchmark)
 export(plotMboHyperparams)
+export(task)
 export(testAddIters)
 export(testConfigs)
 export(tuneMboMbo)
