--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(testAddIters)
 export(testConfigs)
 export(tuneMboMbo)
 import(ParamHelpers)
+import(SPOT)
 import(batchtools)
 import(cmaesr)
 import(dplyr)
